2010-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-file-name-regexp-unified)
	(tramp-completion-file-name-regexp-unified): On W32 systems, do
	not regard the volume letter as remote filename.  (Bug#5447)

2010-07-23  Juanma Barranquero  <lekktu@gmail.com>

	* custom.el (custom-declare-variable): Give a clearer error message
	when the docstring is missing (bug#6476).

2010-07-22  Michael R. Mauger  <mmaug@yahoo.com>

	* progmodes/sql.el: Version 2.4.  Improved Login prompting.
	(sql-login-params): New widget definition.
	(sql-oracle-login-params, sql-mysql-login-params)
	(sql-solid-login-params, sql-sybase-login-params)
	(sql-informix-login-params, sql-ingres-login-params)
	(sql-ms-login-params, sql-postgres-login-params)
	(sql-interbase-login-params, sql-db2-login-params)
	(sql-linter-login-params): Use it.
	(sql-sqlite-login-params): Use it; Define "database" parameter as
	a file name.
	(sql-sqlite-program): Change to "sqlite3"
	(sql-comint-sqlite): Make sure database name is complete.
	(sql-for-each-login): New function.
	(sql-connect, sql-save-connection): Use it.
	(sql-get-login-ext): New function.
	(sql-get-login): Use it.
	(sql-make-alternate-buffer-name): Handle :file parameters.

2010-07-22  Juanma Barranquero  <lekktu@gmail.com>

	* dired.el (dired-no-confirm): Document value t and fix defcustom to
	accept it (bug#6597).  Suggested by Drew Adams <drew.adams@oracle.com>.

2010-07-22  Teemu Likonen  <tlikonen@iki.fi>  (tiny change)

	* dired.el (dired-mode-map): Use command remapping (bug#6632).

2010-07-22  Lawrence Mitchell  <wence@gmx.li>

	* term/vt100.el (vt100-wide-mode): Fix :init-value keyword (bug#6620).

2010-07-21  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-get-ls-command)
	(tramp-get-ls-command-with-dired): Run tests on "/dev/null"
	instead of "/".

2010-07-20  Michael R. Mauger  <mmaug@yahoo.com>

	* progmodes/sql.el: Version 2.3.
	(sql-connection-alist): Changed keys from symbols to strings;